# nix

./: .gitignore  README.md  flake.nix  go.mod  go.sum  requirements.txt
.config.nvim/: README.md  init.lua  lazy-lock.json  test.lua
.github/workflows/: release.yml  version.yml
go/: coverage.out  test.sh
go/aws/: README.md  main.go
go/dac/: README.md  nfw_single_vpc.yml
go/glappy/: README.md  build.sh  go.mod  go.sum  main.go
go/kaws/: .kaws-operator.yaml.example  .kaws.yaml.example  ARCHITECTURE.md  Dockerfile  LEADER_ELECTION.md  Makefile  Makefile.integration  README.md  TESTING_LEADER_ELECTION.md  cover.out  debug_e2e.sh  go.mod  go.sum  main.go  test_e2e_commands.sh
go/kube/: README.md  coverage.out  integration_test.go  main.go  main_test.go  table_test.go
nuxt/saas/: nuxt.config.ts  package.json  pnpm-lock.yaml
pkg/aws/: nlb.go  nlb_test.go  nodegroups.go  nodegroups_test.go  subnets.go
pkg/config/: kubeconfig.go  viper.go  viper_test.go
pkg/container/: handler.go
pkg/k8s/: client.go  client_test.go  event.go  event_test.go  filter_test.go  recycler.go
pkg/operator/: utils.go
pkg/print/: events.go  events_test.go  images.go  nlb.go  nlb_test.go  subnets.go  subnets_test.go
pkg/vpc/: subnets_test.go  types.go
profile/: flake.nix
py/: demo.py
py/aws/: Justfile  README.md  delete_vpc.py  example_usage.sh  flake.nix  pyproject.toml  test_aws_setup.py  tgw_route.py  vpc_route.py
py/fastapi/: helloworld.py
py/flappy/: .gitignore  Justfile  README.md  flake.nix  flappy_bird.py  pyproject.toml
py/flappy/tests/: test_game.py
py/k8s/: flake.nix
py/panda/: join_agg_vis.py  join_agg_vis_vanilla.py  population.py  window_funs.py  window_funs_vanila.py
py/sql/: drop_db.py  employee.py  library.py  (+4 more)
scripts/: release.sh
(+128 files in other folders)
